Chartjs line muestra datos de API

--- a/charts-comparison/src/app/pages/live/live.component.html
+++ b/charts-comparison/src/app/pages/live/live.component.html
@@ -1,3 +1,8 @@
-<p>
-  live works!
-</p>
+<nb-card>
+  <nb-card-header>Line</nb-card-header>
+  <nb-card-body>
+    <chartjs-live></chartjs-live>
+  </nb-card-body>
+</nb-card>
+
+<echarts-live></echarts-live>
