Esqueleto gráfico echart para obtener datos de API

--- a/charts-comparison/src/app/pages/live/live.component.html
+++ b/charts-comparison/src/app/pages/live/live.component.html
@@ -1,8 +1,16 @@
 <nb-card>
-  <nb-card-header>Line</nb-card-header>
+  <nb-card-header>chartjs API</nb-card-header>
   <nb-card-body>
     <chartjs-live></chartjs-live>
   </nb-card-body>
 </nb-card>
 
-<echarts-live></echarts-live>
+<nb-card>
+  <nb-card-header>echarts API</nb-card-header>
+  <nb-card-body>
+    <echarts-live></echarts-live>
+  </nb-card-body>
+</nb-card>
+
+
+
