--- a/charts-comparison/src/app/pages/live/live.component.html
+++ b/charts-comparison/src/app/pages/live/live.component.html
@@ -1,3 +1,4 @@
+<!-- 
 <nb-card>
   <nb-card-header>chartjs API</nb-card-header>
   <nb-card-body>
@@ -11,6 +12,15 @@
     <echarts-live></echarts-live>
   </nb-card-body>
 </nb-card>
+-->
 
-
-
+<nb-card>
+  <nb-tabset>
+    <nb-tab tabTitle="chartjs API">
+      <chartjs-live></chartjs-live>
+    </nb-tab>
+    <nb-tab tabTitle="echarts API">
+      <echarts-live></echarts-live>
+    </nb-tab>
+  </nb-tabset>
+</nb-card>
