--- a/charts-comparison/src/app/pages/echarts/echarts.component.html
+++ b/charts-comparison/src/app/pages/echarts/echarts.component.html
@@ -55,4 +55,12 @@
       </nb-card-body>
     </nb-card>
   </div>
+  <div class="col-lg-12">
+    <nb-card>
+      <nb-card-header>Tree</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-tree></ngx-echarts-tree>
+      </nb-card-body>
+    </nb-card>
+  </div>
 </div>
