--- a/charts-comparison/src/app/pages/echarts/echarts.component.html
+++ b/charts-comparison/src/app/pages/echarts/echarts.component.html
@@ -63,4 +63,12 @@
       </nb-card-body>
     </nb-card>
   </div>
+  <div class="col-lg-12">
+    <nb-card>
+      <nb-card-header>Density Map</nb-card-header>
+      <nb-card-body>
+        <ngx-echarts-map-density></ngx-echarts-map-density>
+      </nb-card-body>
+    </nb-card>
+  </div>
 </div>
